# Tab-Glitcher

./: .gitignore  CMakeLists.txt  README.md  TabGlitcher.manifest  TabGlitcher.rc
src/: gui.cpp  gui.h  hotkey_manager.cpp  hotkey_manager.h  main_imgui.cpp  process_manager.cpp  process_manager.h
